log/build_2026-04-24_23-30-55/tensorrt_detect/stdout_stderr.log
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.5.6 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found Python3: /home/delphine/miniconda3/bin/python3 (found version "3.13.12") found components: Interpreter 
-- Found rclcpp: 28.1.18 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.7 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.3 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.13")  
-- Found FastRTPS: /opt/ros/jazzy/include (Required is at least version "2.13") 
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 5.3.7 (/opt/ros/jazzy/share/sensor_msgs/cmake)
-- Found cv_bridge: 4.1.0 (/opt/ros/jazzy/share/cv_bridge/cmake)
-- Found tensorrt_detect_msgs: 0.0.1 (/home/delphine/rm/tensorrt10_detect/install/tensorrt_detect_msgs/share/tensorrt_detect_msgs/cmake)
-- Found OpenCV: /usr (found version "4.6.0") 
-- Found CUDAToolkit: /usr/include (found version "12.0.140") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
CMake Deprecation Warning at /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake:18 (cmake_policy):
  The OLD behavior for policy CMP0072 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  CMakeLists.txt:28 (find_package)


-- Found Open3D: /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake (found version "0.19.0") 
-- Configuring done (1.1s)
-- Generating done (0.0s)
-- Build files have been written to: /home/delphine/rm/tensorrt10_detect/build/tensorrt_detect
[ 10%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/config/ConfigManager.cpp.o
[ 10%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/pipeline.cpp.o
[ 15%] Building CXX object CMakeFiles/video_node.dir/src/nodes/video_node.cpp.o
[ 25%] Building CXX object CMakeFiles/display_node.dir/src/nodes/display_node.cpp.o
[ 25%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/visualization/ui.cpp.o
[ 35%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/posesolver.cpp.o
[ 35%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/raycaster.cpp.o
[ 40%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/model.cpp.o
[ 45%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/mouseback.cpp.o
[ 50%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/core/radarmap.cpp.o
[ 55%] Building CXX object CMakeFiles/tensorrt_detect_core.dir/src/visualization/draw.cpp.o
[ 60%] Linking CXX static library libtensorrt_detect_core.a
[ 60%] Built target tensorrt_detect_core
[ 65%] Building CXX object CMakeFiles/standard.dir/apps/standalone_main.cpp.o
[ 70%] Building CXX object CMakeFiles/pose_node.dir/src/nodes/pose_node.cpp.o
[ 75%] Building CXX object CMakeFiles/detect_node.dir/src/nodes/detect_node.cpp.o
[ 80%] Linking CXX executable video_node
[ 80%] Built target video_node
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/apps/standalone_main.cpp: In function ‘int main(int, const char**)’:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/apps/standalone_main.cpp:200:61: error: ‘const struct Result’ has no member named ‘teamId’
  200 |             mappoints.push_back({mp, "", result.idx, result.teamId});
      |                                                             ^~~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/apps/standalone_main.cpp:200:32: error: no matching function for call to ‘std::vector<Mappoint>::push_back(<brace-enclosed initializer list>)’
  200 |             mappoints.push_back({mp, "", result.idx, result.teamId});
      |             ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /home/delphine/miniconda3/include/yaml-cpp/binary.h:11,
                 from /home/delphine/miniconda3/include/yaml-cpp/emitter.h:18,
                 from /home/delphine/miniconda3/include/yaml-cpp/yaml.h:11,
                 from /home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/apps/standalone_main.cpp:1:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = Mappoint; _Alloc = std::allocator<Mappoint>; value_type = Mappoint]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<Mappoint>::value_type&’ {aka ‘const Mappoint&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = Mappoint; _Alloc = std::allocator<Mappoint>; value_type = Mappoint]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<Mappoint>::value_type&&’ {aka ‘Mappoint&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
gmake[2]: *** [CMakeFiles/standard.dir/build.make:76: CMakeFiles/standard.dir/apps/standalone_main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:173: CMakeFiles/standard.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 85%] Linking CXX executable display_node
[ 85%] Built target display_node
[ 90%] Linking CXX executable pose_node
[ 90%] Built target pose_node
[ 95%] Linking CXX executable detect_node
[ 95%] Built target detect_node
gmake: *** [Makefile:146: all] Error 2
